Fix debate show votes alignment

--- a/app/assets/stylesheets/base.scss
+++ b/app/assets/stylesheets/base.scss
@@ -2349,10 +2349,6 @@ footer {
   border-left: 0;
 }
 
-.debate-show .votes {
-  text-align: left;
-}
-
 .debate,
 .debate-show,
 .proposal-show,
